# python-poetry-dependabot-template

./: .gitignore  Gemfile  dependabot-script.rb  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
tests/: test_example.py
