[tool.poetry]
name = "python-poetry-dependabot-template"
version = "0.1.0"
description = "A template for Python projects using Poetry and Dependabot"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
